# ChangeLog for dev-python/PyQt4
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*PyQt4-4.6_pre20090810 (11 Aug 2009)

  11 Aug 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.6_pre20090809.ebuild, +PyQt4-4.6_pre20090810.ebuild:
  New snapshot. Remove old

*PyQt4-4.6_pre20090809 (10 Aug 2009)

  10 Aug 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.5.5_pre20090806.ebuild, +PyQt4-4.6_pre20090809.ebuild:
  New snapshot

  09 Aug 2009; Davide Pesavento <davidepesa@gmail.com>
  PyQt4-4.5.5_pre20090806.ebuild:
  Respect LINK, add missing inherit and fix a couple of comments.

*PyQt4-4.5.5_pre20090806 (07 Aug 2009)

  07 Aug 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.5.5_pre20090805.ebuild, +PyQt4-4.5.5_pre20090806.ebuild:
  New snapshot

*PyQt4-4.5.5_pre20090805 (06 Aug 2009)

  06 Aug 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.5.5_pre20090730.ebuild, +PyQt4-4.5.5_pre20090805.ebuild:
  New snapshot. Synced with portage ebuild

  05 Aug 2009; Markos Chandras <hwoarang@gentoo.org> -PyQt4-4.5.4-r1.ebuild:
  On tree

*PyQt4-4.5.4-r1 (04 Aug 2009)

  04 Aug 2009; Markos Chandras <hwoarang@gentoo.org> +PyQt4-4.5.4-r1.ebuild:
  Fix portage ebuild according to Davide's improvements

  04 Aug 2009; Markos Chandras <hwoarang@gentoo.org>
  PyQt4-4.5.5_pre20090730.ebuild:
  Install full html documentation ( bug #280055 )

  04 Aug 2009; Davide Pesavento <davidepesa@gmail.com>
  PyQt4-4.5.5_pre20090730.ebuild:
  Re-apply my recent QA fixes that got lost when syncing with Portage
  ebuild.

*PyQt4-4.5.5_pre20090730 (31 Jul 2009)

  31 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
  -PyQt4-4.5.3_pre20090724.ebuild, +PyQt4-4.5.5_pre20090730.ebuild:
  New snapshot

  30 Jul 2009; Davide Pesavento <davidepesa@gmail.com>
  PyQt4-4.5.3_pre20090724.ebuild, files/configure.py.patch:
  Use eqmake4 in the qpy subdirs to fix the remaining QA issues. Drop the
  last hunk from configure.py patch since it's redundant now.