@@ -1,4 +1,6 @@
 DIST sip-4.9-snapshot-20090808.tar.gz 625718 RMD160 21fe4b339633dd0423dd836c79300aedba84b39e SHA1 96843598bef5d08206696431471d66c4d98e9455 SHA256 fb01a0d2bea9ecc65794cd452ca278c8a10521a7c4985abf376ae6da098c0502
+DIST sip-4.9-snapshot-20090811.tar.gz 625992 RMD160 3a943fafd3567274b9fc64188ad3611f9aec29c3 SHA1 200b2d742dab2ef0dba40ccd5850ef38ef40bfb7 SHA256 59f008b748055d058f833960f3ff6472bec0e0b8cb020dcceefb7cd4d21d631f
 EBUILD sip-4.9_pre20090808.ebuild 1579 RMD160 d868f7deae39a62fcda6e70b2292058211fd2b2c SHA1 832e4e65c175d6a41cc7faabc908ad7bec7887f7 SHA256 120de85d88470ea9be89fdca857c44c48f0b1db334d44e7ec43ca4467135df35
-MISC ChangeLog 2832 RMD160 fe7be663c8d509e9f607b2111e8ab443dca56afb SHA1 92e7b1efd535ff3bba1140b4e0390cb53f82dfd7 SHA256 69c39f874ac8d279f7b415fee2e904fff1566b3b317b8fe05c9bc01366161aad
+EBUILD sip-4.9_pre20090811.ebuild 1579 RMD160 d868f7deae39a62fcda6e70b2292058211fd2b2c SHA1 832e4e65c175d6a41cc7faabc908ad7bec7887f7 SHA256 120de85d88470ea9be89fdca857c44c48f0b1db334d44e7ec43ca4467135df35
+MISC ChangeLog 2968 RMD160 ae706d1b7a99b6155a796a6416a6906573ae9171 SHA1 eaba65457c7b652b1301930c73e3c4a416eb4077 SHA256 f80efef8915729c82abfb96c2a6cf166bf6f2a817c2180c6e6a37aa0bd3bb966
 MISC metadata.xml 157 RMD160 84dc01e4115bf31e84059fa795c95e94ad39df23 SHA1 fe6fa39ce2ba5cd6a8e7da28113fe05e22b5a39a SHA256 a2ffc792d4df94c3f8088e329c4bf74804540c2797f3e24ab0030acbdfd4b535
