@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sip-4.9_pre20090811 (12 Aug 2009)
+
+  12 Aug 2009; Markos Chandras <hwoarang@gentoo.org>
+  +sip-4.9_pre20090811.ebuild:
+  New snapshot
+
 *sip-4.9_pre20090808 (10 Aug 2009)
 
   10 Aug 2009; Markos Chandras <hwoarang@gentoo.org>
